# CNN

./: AlphaZero_Reference.md  CMakeLists.txt  README.md  conv_layer.cpp  conv_layer.h  fully_connected_layer.cpp  fully_connected_layer.h  main.cpp  max_pooling_layer.cpp  max_pooling_layer.h  session.cpp  session.h  utils.cpp  utils.h
PPT/: CPP presentation.key
data/: test.csv
